--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,14 @@
 buildscript {
     ext.kotlin_version = '1.3.72'
     ext.retrofit_version = '2.9.0'
-    ext.navigation_version = '2.3.0-beta01'
+    ext.navigation_version = '2.3.0'
     ext.glide_version = '4.11.0'
     ext.coroutines_version = '1.3.0'
     ext.lifecycle_version = '2.2.0'
     ext.room_version = '2.2.5'
-    ext.dagger_version = '2.28'
+    ext.dagger_version = '2.28.1'
+    ext.hilt_version = '2.28.1-alpha'
+    ext.hilt_jetpack_version = '1.0.0-alpha01'
 
     repositories {
         google()
@@ -18,6 +20,8 @@ buildscript {
         classpath 'com.android.tools.build:gradle:4.0.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation_version"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
+
 
 
         // NOTE: Do not place your application dependencies here; they belong
