--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,23 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.4.10'
+    ext.kotlin_version = '1.6.21'
     ext.retrofit_version = '2.9.0'
-    ext.navigation_version = '2.3.0'
+    ext.navigation_version = '2.5.0-alpha01'
     ext.glide_version = '4.11.0'
     ext.coroutines_version = '1.3.0'
     ext.lifecycle_version = '2.2.0'
-    ext.room_version = '2.2.5'
-    ext.dagger_version = '2.29.1'
-    ext.hilt_version = '2.29.1-alpha'
-    ext.hilt_jetpack_version = '1.0.0-alpha02'
+    ext.room_version = '2.4.2'
+    ext.dagger_version = '2.35.1'
+    ext.hilt_version = '2.38.1'
+    ext.hilt_jetpack_version = '1.0.0-alpha03'
 
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.0'
+        classpath 'com.android.tools.build:gradle:7.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation_version"
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
@@ -29,7 +29,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 }
 
