--- a/build.gradle
+++ b/build.gradle
@@ -3,21 +3,19 @@
 buildscript {
     ext.kotlin_version = '1.6.21'
     ext.retrofit_version = '2.9.0'
-    ext.navigation_version = '2.5.0-alpha01'
-    ext.glide_version = '4.11.0'
-    ext.coroutines_version = '1.3.0'
+    ext.navigation_version = '2.5.0-rc01'
+    ext.coroutines_version = '1.6.0'
     ext.lifecycle_version = '2.2.0'
     ext.room_version = '2.4.2'
-    ext.dagger_version = '2.35.1'
-    ext.hilt_version = '2.38.1'
-    ext.hilt_jetpack_version = '1.0.0-alpha03'
+    ext.hilt_version = '2.40.1'
+    ext.compose_version = '1.2.0-beta01'
 
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.1.3'
+        classpath 'com.android.tools.build:gradle:7.2.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation_version"
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
