--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,21 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.6.21'
+    ext.kotlin_version = '1.7.10'
     ext.retrofit_version = '2.9.0'
-    ext.navigation_version = '2.5.0-rc01'
-    ext.coroutines_version = '1.6.0'
+    ext.navigation_version = '2.5.2'
+    ext.coroutines_version = '1.6.4'
     ext.lifecycle_version = '2.2.0'
-    ext.room_version = '2.4.2'
-    ext.hilt_version = '2.40.1'
-    ext.compose_version = '1.2.0-beta01'
+    ext.room_version = '2.4.3'
+    ext.hilt_version = '2.42'
+    ext.compose_version = '1.3.0-rc01'
 
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.2.1'
+        classpath 'com.android.tools.build:gradle:7.3.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation_version"
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
